<resources>
    <string name="app_name">Hale</string>
    <string name="action_settings">Settings</string>
    <string name="btn_activity_back">Back</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_sure">Sure</string>
    <string name="btn_positive">OK</string>
    <string name="btn_negative">Cancel</string>
    <string name="title_activity_main">Hale</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_register">Sign up</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_et_login_no">Phone Number</string>
    <string name="hint_et_login_pwd">Password</string>
    <string name="cb_show_pwd">show password</string>
    <string name="tv_pwd_forget">forget password</string>
    <string name="tv_label_login_pattern">Sign in via</string>
    <string name="btn_login_pattern_qq">QQ</string>
    <string name="btn_login_pattern_wechat">WeChat</string>
    <string name="btn_login_pattern_weibo">Weibo</string>
    <string name="error_msg_wechat_not_installed">Wechat App not installed</string>
    <string name="title_activity_pwd_forget">PwdForgetActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="btn_step_previous">Back</string>
    <string name="btn_step_next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_et_phone_reg">Phone Number</string>
    <string name="btn_captcha_req">Captcha</string>
    <string name="dialog_message_captcha">我们已经验证码通过短信发送到 %s 中,请注意查收</string>
    <string name="hint_et_validate_code_input">validate code</string>
    <string name="btn_captcha_submit">Submit</string>
    <string name="btn_validate_phone">Validate Phone</string>
    <string name="hint_et_nick_name_reg">nick name</string>
    <string name="hint_et_pwd_reg">password</string>
    <string name="hint_et_pwd_retype_reg">retype password</string>
    <string name="hint_et_qq_reg">QQ</string>
    <string name="hint_et_email_reg">eMail</string>
    <string name="tv_label_address">Address</string>
    <string name="tv_label_gender">Gender</string>
    <string name="rb_gender_male">Male</string>
    <string name="rb_gender_female">Female</string>
    <string name="btn_info_reg_submit">Submit</string>
    <string name="dialog_title_address_picker">Address Picker</string>
    <string name="et_detail_address">Detail Address</string>
    <string name="btn_submit_address">@string/btn_positive</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tv_activity_title_message">Recently</string>
    <string name="tv_activity_title_roster">People</string>
    <string name="tv_activity_title_discovery">Discovery</string>
    <string name="tv_activity_title_account">Account</string>
    <string name="tv_list_chat">Message</string>
    <string name="tv_list_friend">Buddies</string>
    <string name="tv_discovery">Discovery</string>
    <string name="tv_account_management">Account</string>
    <string name="tv_menu_drop_down">dropdown</string>
    <string name="menu_action_scan">Scan</string>
    <string name="menu_action_resource">Resource</string>
    <string name="menu_action_maintain">Maintain</string>
    <string name="menu_action_nearby_friends">Nearby Buddies</string>
    <string name="menu_action_nearby_ads">Nearby ads</string>
    <string name="menu_action_share_apk">Share App</string>
    <string name="title_activity_nearby_ads">NearbyAdsActivity</string>
    <string name="title_activity_nearby_ad_detail">NearbyAdDetailActivity</string>
    <string name="title_activity_remark_update">RemarkUpdateActivity</string>
    <string name="tv_remark_update_ok">ok</string>
    <string name="tv_fragment_buddy">BuddyFragment</string>
    <string name="tv_fragment_account">AccountFragment</string>
    <string name="tv_account_item_settings">@string/title_activity_settings</string>
    <string name="tv_account_item_uploaded">My Uploaded</string>
    <string name="tv_account_item_maintained">My Maintained</string>
    <string name="tv_account_item_filter_list">Shiled List</string>
    <string name="title_activity_resource_list">ResourceListActivity</string>
    <string name="title_activity_resource_detail">ResourceDetailActivity</string>
    <string name="title_activity_filter_list">@string/tv_account_item_filter_list</string>
    <string name="title_activity_account_info">AccountInfoActivity</string>
    <string name="title_activity_resource_upload_list">ResourceUploadListActivity</string>
    <string name="title_activity_ad_resource_upload_detail">AdResourceUploadDetailActivity</string>
    <string name="title_activity_ad_upload_list">AdUploadListActivity</string>
    <string name="title_activity_ad_upload_detail">AdUploadDetailActivity</string>
    <string name="title_activity_resource_post">ResourcePostActivity</string>
    <string name="hint_et_resource_width">Width</string>
    <string name="hint_et_resource_height">Height</string>
    <string name="tv_location">Location</string>
    <string name="hint_et_location">Location</string>
    <string name="hint_et_description">Description</string>
    <string name="tv_photos">Photos</string>
    <string name="title_activity_ad_maintain">AdMaintain</string>
    <string name="title_activity_nearby_friends">NearbyFriendsActivity</string>
    <string name="title_activity_chat">%s</string>
    <string name="btn_send">Send</string>
    <string name="action_text">Text</string>
    <string name="action_photo">Photo</string>
    <string name="action_image">Image</string>
    <string name="action_select_image">Select Image</string>
    <string name="action_voice">Voice</string>
    <string name="btn_voice_record">Hold and Speak loudly</string>
    <string name="btn_voice_record_up">Release and Send voice </string>
    <string name="tv_offline_message">Offline Message</string>
    <string name="tv_load_offline_message">Offline Message(%s)</string>
    <string name="title_activity_bulk_msg">BulkMsgActivity</string>
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="tv_settings_item_account">Account Settings</string>
    <string name="tv_settings_item_msg">Message Settings</string>
    <string name="tv_settings_item_about">About Us</string>
    <string name="tv_settings_item_exit">Sign out</string>
    <string name="title_activity_account_settings">AccountSettingsActivity</string>
    <string name="tv_settings_item_change_pwd">Change Password</string>
    <string name="tv_settings_item_update_info">Update Profile</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>
    <string name="title_activity_account_info_update">AccountInfoUpdateActivity</string>
    <string name="title_activity_about">About</string>
    <string name="tv_app_name_version_code">Hale V%s</string>
    <string name="tv_about_item_guide">Guideline</string>
    <string name="tv_about_item_suggestion">Feedback</string>
    <string name="tv_about_item_version">Check New Version</string>
    <string name="tv_about_item_share_apk">Share Apk Package</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="btn_feedback_submit">Submit</string>
    <string name="title_activity_grey_bitmap">GreyBitmapActivity</string>
    <string name="image_get_data_null">REQUEST_IMAGE_GET data null</string>
    <string name="image_get_file_null">REQUEST_IMAGE_GET file null</string>
    <string name="image_capture_user_canceled">REQUEST_IMAGE_CAPTURE canceled</string>
    <string name="image_capture_user_error">REQUEST_IMAGE_CAPTURE error</string>
    <string name="image_get_file_user_canceled">REQUEST_IMAGE_GET canceled</string>
    <string name="image_get_file_user_error">REQUEST_IMAGE_GET error</string>
    <string name="action_radius_all">All </string>
    <string name="action_radius_half">500 m</string>
    <string name="action_radius_kilometer">1 km</string>
    <string name="action_radius_kilometer_2">2 km</string>
    <string name="action_radius_kilometer_5">5 km</string>
    <string name="action_range_1">range_2</string>
    <string name="action_range_2">range_2</string>
    <string name="action_range_all">All</string>
    <string name="btn_ad_maintain_code_scan">Scan</string>
    <string name="btn_ad_maintain_code_scan_cancelled">Cancel</string>
    <string name="btn_ad_maintain_code_scan_ok">Scan OK</string>
    <string name="btn_ad_maintain_code_scan_result">Scan Result: %s</string>
    <string name="weibosdk_demo_toast_obtain_token_success">obtain token success</string>
    <string name="weibosdk_demo_toast_obtain_token_failed">obtain token failure</string>
    <string name="weibosdk_demo_toast_obtain_code_success">obtain code success</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">obtain code failure</string>
    <string name="weibosdk_demo_toast_auth_success">toast auth success</string>
    <string name="weibosdk_demo_toast_auth_failed">toast auth failure</string>
    <string name="weibosdk_demo_toast_auth_error_unknown">toast auth error unknown</string>
    <string name="weibosdk_demo_toast_auth_canceled">toast auth cancel</string>
    <string name="weibo_toast_auth_expired">toast auth expired</string>
    <string name="tv_user_status_online">online</string>
    <string name="tv_user_status_offline">offline</string>
    <string name="tv_user_distance">distance</string>
    <string name="tv_resource_post_requirement">Post</string>
    <string name="tv_resource_detail_width">Width</string>
    <string name="tv_resource_detail_update_time">Update time</string>
    <string name="tv_resource_detail_status"></string>
    <string name="content_new_offline_msg">new offline msg</string>
    <string name="content_type_pic">picture</string>
    <string name="content_type_voice">voice</string>
    <string name="date_display_error">date format error</string>
    <string name="date_display_today">today</string>
    <string name="date_display_yesterday">yesterday</string>
    <string name="debug_http_response_invalid">response invalid</string>
    <string name="dialog_message_url">open with browser ?</string>
    <string name="dialog_message_url_latest_app_download">new version </string>
    <string name="dialog_msg_bulk_msg_load_info_error">load information error</string>
    <string name="dialog_msg_bulk_msg_send_invalidate">bulk msg format invalidate</string>
    <string name="dialog_msg_bulk_msg_send_more_than_max_times">bulk msg send more than max times today</string>
    <string name="dialog_msg_bulk_msg_send_no_integration">no integration</string>
    <string name="hint_et_contact">Contract</string>
    <string name="hint_et_contact_phone">Phone</string>
    <string name="illegal_uri_exception">illegal Uri exeption</string>
    <string name="image_data_null">No image error</string>
    <string name="menu_bulk_action_radius_kilometer_1">1 km</string>
    <string name="menu_bulk_action_radius_kilometer_10">10 km</string>
    <string name="menu_bulk_action_radius_kilometer_100">100 km</string>
    <string name="menu_bulk_action_radius_kilometer_1000">1000 km</string>
    <string name="menu_bulk_action_radius_kilometer_5">5 km</string>
    <string name="menu_bulk_action_radius_meter_100">100 m</string>
    <string name="network_error">network error</string>
    <string name="pb_message_load_info">load your information</string>
    <string name="pb_message_login_failure">sign in error</string>
    <string name="pb_message_login_now">sign in now</string>
    <string name="pb_message_login_ok">sign in ok</string>
    <string name="pb_message_submit_infor">uploading your information</string>
    <string name="pb_message_submit_infor_failure">submit error</string>
    <string name="tv_guide_content">guide content</string>
</resources>