<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="net.pingfang.signalr.chat.activity.BulkMsgActivity">

      <item
          android:id="@+id/menu_bulk_action_radius_meter_100"
          android:orderInCategory="100"
          android:title="@string/menu_bulk_action_radius_meter_100"
          app:showAsAction="never"/>

      <item
          android:id="@+id/menu_bulk_action_radius_kilometer_1"
          android:orderInCategory="101"
          android:title="@string/menu_bulk_action_radius_kilometer_1"
          app:showAsAction="never"/>

      <item
          android:id="@+id/menu_bulk_action_radius_kilometer_5"
          android:orderInCategory="102"
          android:title="@string/menu_bulk_action_radius_kilometer_5"
          app:showAsAction="never"/>

      <item
          android:id="@+id/menu_bulk_action_radius_kilometer_10"
          android:orderInCategory="103"
          android:title="@string/menu_bulk_action_radius_kilometer_10"
          app:showAsAction="never"/>

      <item
          android:id="@+id/menu_bulk_action_radius_kilometer_1000"
          android:orderInCategory="103"
          android:title="@string/menu_bulk_action_radius_kilometer_1000"
          app:showAsAction="never"/>
</menu>
