<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
              android:orientation="vertical"
    tools:context="net.pingfang.signalr.chat.activity.AppAboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_btn_default">

        <TextView android:id="@+id/btn_activity_back"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:padding="@dimen/padding_back_button"
                  android:text="@string/btn_activity_back"
                  android:textColor="@android:color/white"/>

        <TextView android:id="@+id/tv_activity_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:padding="@dimen/padding_activity_title"
                  android:text="@string/title_activity_about"
                  android:textColor="@android:color/white"
                  android:textSize="@dimen/text_size_activity_title"/>

    </RelativeLayout>

    <ImageView android:id="@+id/iv_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
               android:src="@drawable/hale_icon"/>

    <TextView android:id="@+id/tv_app_name_version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/activity_vertical_margin"
              android:text="@string/app_name"/>

    <TextView android:id="@+id/tv_about_item_version"
              style="@style/SettingItemStyle"
              android:background="@drawable/selector_settings_item"
              android:text="@string/tv_about_item_version"/>

    <TextView android:id="@+id/tv_about_item_guide"
              style="@style/SettingItemStyle"
              android:background="@drawable/selector_settings_item"
              android:drawableEnd="@drawable/setting_view_arrow"
              android:drawableRight="@drawable/setting_view_arrow"
              android:text="@string/tv_about_item_guide"/>

    <TextView android:id="@+id/tv_about_item_suggestion"
              style="@style/SettingItemStyle"
              android:background="@drawable/selector_settings_item"
              android:drawableEnd="@drawable/setting_view_arrow"
              android:drawableRight="@drawable/setting_view_arrow"
              android:text="@string/tv_about_item_suggestion"/>

    <TextView android:id="@+id/tv_about_item_share_apk"
              style="@style/SettingItemStyle"
              android:background="@drawable/selector_settings_item"
              android:drawableEnd="@drawable/setting_view_arrow"
              android:drawableRight="@drawable/setting_view_arrow"
              android:text="@string/tv_about_item_share_apk"/>


</LinearLayout>
