<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="net.pingfang.signalr.chat.fragment.InfoRegFragment">

    <EditText android:id="@+id/et_phone_reg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:enabled="false"
              android:inputType="phone"/>

    <EditText android:id="@+id/et_nick_name_reg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/hint_et_nick_name_reg"/>

    <EditText android:id="@+id/et_pwd_reg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/hint_et_pwd_reg"
              android:inputType="textPassword"/>

    <EditText android:id="@+id/et_pwd_retype_reg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/hint_et_pwd_retype_reg"
              android:inputType="textPassword"/>

    <!--
    <EditText android:id="@+id/et_qq_reg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/hint_et_qq_reg"/>

    <EditText android:id="@+id/et_email_reg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"
              android:hint="@string/hint_et_email_reg"
              android:selectAllOnFocus="false"/>
    -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:text="@string/tv_label_gender"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/rb_gender_male" />

            <RadioButton
                android:id="@+id/rb_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb_gender_female" />
        </RadioGroup>
    </LinearLayout>


    <TextView
        android:id="@+id/btn_info_reg_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/selector_btn_bg"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_vertical_button_info_reg_submit"
        android:paddingTop="@dimen/padding_vertical_button_info_reg_submit"
        android:text="@string/btn_info_reg_submit"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

</LinearLayout>
