<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.pingfang.signalr.chat.activity.AccountSettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/btn_activity_back"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:padding="@dimen/padding_back_button"
                  android:text="@string/btn_activity_back"/>

        <TextView android:id="@+id/tv_activity_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:padding="@dimen/padding_activity_title"
                  android:text="@string/title_activity_account_settings"
                  android:textSize="@dimen/text_size_activity_title" />

    </RelativeLayout>

    <TextView android:id="@+id/tv_settings_item_change_pwd"
        style="@style/SettingItemStyle"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/selector_settings_item"
        android:text="@string/tv_settings_item_change_pwd"
        android:drawableRight="@drawable/setting_view_arrow"
        android:drawableEnd="@drawable/setting_view_arrow"/>

    <TextView android:id="@+id/tv_settings_item_update_info"
        style="@style/SettingItemStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/selector_settings_item"
        android:text="@string/tv_settings_item_update_info"
        android:drawableRight="@drawable/setting_view_arrow"
        android:drawableEnd="@drawable/setting_view_arrow"/>

</LinearLayout>
