<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/dialog_title_address_picker"
        android:background="@color/bg_color_dialog_title_address_picker"
        android:textColor="@color/text_color_dialog_title_address_picker"
        android:textSize="@dimen/text_size_dialog_title_address_picker" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/sp_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/sp_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/sp_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_detail_address"/>

    <Button
        android:id="@+id/btn_submit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit_address" />

</LinearLayout>